$Id: History,v 1.66 2001-02-02 16:23:59 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

February 01, 2001 G.Cosmo, H.Kurasige (global-V03-00-03)
- Migration to STL vectors for G4OrderedTable and G4DataVector. In
  G4OrderedTable, G4ValVector type has been removed and is now replaced
  with G4DataVector.
- Removed from G4PhysicsVector dependency over G4PhysicsTable.
  Removed methods: LinkPhysicsTable(), IsLinkedTableExist() and
  GetNextTable(). Removed data-member ptrNextTable.
  Updated all related subclasses.
- Updated unit tests in management/test.

January 29, 2001 G.Cosmo (global-V03-00-02)
- Added generic class G4PolynomialSolver in HEPNumerics module, extracting
  logic from class G4Torus in geometry/solids/CSG.

January 16, 2001 G.Cosmo (global-V03-00-01)
- Minor fixes to last migration in management classes
  tagged global-STLmigration-V02.

January 09, 2001 H.Kurashige
- Full STL migration for G4PhysicsVector and related.

January 09, 2001 G.Cosmo (global-V03-00-00)
- Fixed bug in destructor of G4Allocator (report #181): use "delete"
  instead of "free" for deleting a page allocated with "new". 

December 13, 2000 G.Folger (global-V02-00-06)