@@ -1,4 +1,4 @@
-$Id: History,v 1.66 2001-02-02 16:23:59 gcosmo Exp $
+$Id: History,v 1.67 2001-02-05 10:37:11 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+February 05, 2001 H.Kurasige (global-V03-00-04)
+- Added default constructors to G4DataVector and G4OrderedTable. Removed
+  default size.
 
 February 01, 2001 G.Cosmo, H.Kurasige (global-V03-00-03)
 - Migration to STL vectors for G4OrderedTable and G4DataVector. In
